# ChangeLog for net-mail/fetchmail
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-mail/fetchmail/ChangeLog,v 1.195 2010/05/31 16:24:02 tove Exp $

  31 May 2010; Torsten Veller <tove@gentoo.org>
  -files/fetchmail-6.2.5-broken-headers.patch, -fetchmail-6.3.14.ebuild,
  -fetchmail-6.3.15.ebuild, -fetchmail-6.3.16.ebuild:
  Cleanup

*fetchmail-6.3.17-r1 (18 May 2010)

  18 May 2010; Torsten Veller <tove@gentoo.org>
  +files/MD5_library_pickup.patch, +fetchmail-6.3.17-r1.ebuild,
  +files/debian-580796.patch:
  Remove insecure connection warning if sslfingerprint is given (#319907).
  Thanks to David Fellows.
  Fix linking of libwww's libmd5 (#319283). Thanks to Karl Hakimian and
  Matthias Andree.

  12 May 2010; Joseph Jezak <josejx@gentoo.org> fetchmail-6.3.17.ebuild:
  Marked ppc stable for bug #318875.

  10 May 2010; Brent Baude <ranger@gentoo.org> fetchmail-6.3.17.ebuild:
  Marking fetchmail-6.3.17 ppc64 for bug 318875

  09 May 2010; Raúl Porcel <armin76@gentoo.org> fetchmail-6.3.17.ebuild:
  alpha/arm/ia64/s390/sh/sparc stable wrt #318875

  08 May 2010; Jeroen Roovers <jer@gentoo.org> fetchmail-6.3.17.ebuild:
  Stable for HPPA (bug #318875).

  08 May 2010; Torsten Veller <tove@gentoo.org> fetchmail-6.3.17.ebuild:
  Stable on amd64 and x86 (#318875)

  07 May 2010; Torsten Veller <tove@gentoo.org> fetchmail-6.3.17.ebuild:
  Fix PYTHON_DEPEND. Thanks to Arfrever. Maintenance

*fetchmail-6.3.17 (06 May 2010)

  06 May 2010; Torsten Veller <tove@gentoo.org> +fetchmail-6.3.17.ebuild,
  metadata.xml:
  Version bump. Fetchmailconf is installed only if USE=tk.

*fetchmail-6.3.16 (07 Apr 2010)

  07 Apr 2010; Torsten Veller <tove@gentoo.org> +fetchmail-6.3.16.ebuild:
  Version bump

  29 Mar 2010; Torsten Veller <tove@gentoo.org>
  -files/6.3.11-fix-free-corruption.patch, -fetchmail-6.3.11-r1.ebuild,
  -fetchmail-6.3.13.ebuild:
  Cleanup

*fetchmail-6.3.15 (29 Mar 2010)
